refactor: add LazyLoading fetch to all ManyToOne relations